--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       position: fixed;
       top: 0;
       left: 375px;
+      left: -moz-(375px);
+      left: -o-(375px);
 
     }
     .freePlace{
