--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       position: fixed;
       top: 0;
       left: 375px;
-      left: -moz-(375px);
-      left: -o-(375px);
+      right: 375px;
 
     }
     .freePlace{
