--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       position: fixed;
       top: 0;
       left: 375px;
-      right: 375px;
+      right: -moz-(375px);
 
     }
     .freePlace{
