--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       width: 100%;
       background: white;
     }
+      @media all and (max-width: 480px) { 
+      .fixed {
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
   </style>
 </head>
 <body>
