--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       @media all and (max-width: 480px) { 
       .fixed {
       position: fixed;
-      top: 0;
-      left: 100px;
+      top: 100px;
+      left: 0;
     }
   </style>
 </head>
