--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       @media all and (max-width: 480px) { 
       .fixed {
       position: fixed;
-      top: 100px;
+      top: 0;
       left: 0;
     }
   </style>
