--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       width: 100%;
       background: white;
     }
-      @media all and (max-width: 280px) { 
+      @media(max-width: 380px) { 
       .fixed {
       position: fixed;
       top: 0;
