--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
       width: 100%;
       background: white;
     }
-      @media(max-width: 380px) { 
+    @media all and (max-width: 380px) { 
       .fixed {
       position: fixed;
       top: 0;
       left: 0;
-    }
+      right: 0;
+    } 
   </style>
 </head>
 <body>
