--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     @media all and (max-width: 380px) { 
       .fixed {
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+      top: -moz-(0);
+      left: -moz-(0);
+      right: -moz-(0);
     } 
   </style>
 </head>
