--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
       position: fixed;
       top: 0;
       left: 375px;
+      right: 375px;
+      left: -moz-(0);
+      right: -moz-(0);
     }
     .freePlace{
       height: 200px;
       width: 100%;
       background: white;
     }
-    @media all and (max-width: 380px) { 
-      .fixed {
-      position: fixed;
-      top: -moz-(0);
-      left: -moz-(0);
-      right: -moz-(0);
-    } 
+
   </style>
 </head>
 <body>
