--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
       top: 0;
       left: 375px;
       right: 375px;
-      left: -moz-(0);
-      right: -moz-(0);
     }
     .freePlace{
       height: 200px;
       width: 100%;
       background: white;
     }
-
+    @media all and (max-width: 380px) { 
+      .fixed {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+    } 
   </style>
 </head>
 <body>
