--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     .fixed {
       position: fixed;
       top: 0;
-      left: 375px;
-      right: 375px;
+      left: 25%;
+      right: 25%;
     }
     .freePlace{
       height: 200px;
