--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       margin-top: 200px;
       width: 600px;
       height: 50px;
-      background:#000;
+      background:#333333;
       margin: auto;
     }
 
         #block1 {
       background: white;
-      margin-top: 200px;
       width: 600px;
       height: 50px;
       margin: auto;
@@ -38,12 +37,11 @@
       width: 100%;
       background: white;
     }
-    @media all and (max-width: 380px) { 
+    @media (max-width: 480px) { 
       .fixed {
       position: fixed;
       top: 0;
       left: 0;
-      right: 0;
     } 
   </style>
 </head>
@@ -67,7 +65,7 @@
           blockElem.style.background = '#999999';
         }
         else {
-          blockElem.style.background = '#000';
+          blockElem.style.background = '#333333';
         }
       }
 
